# SDL2-Snake

./: CMakeLists.txt  README.md
src/: game.cpp  game.hpp  main.cpp
